[gd_scene load_steps=9 format=2]

[ext_resource path="res://tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelScript.gd" type="Script" id=3]
[ext_resource path="res://PlayerNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Collectables.tscn" type="PackedScene" id=5]
[ext_resource path="res://CameraRootNode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Collectables.gd" type="Script" id=7]
[ext_resource path="res://UI_Group.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Door_X1" parent="." instance=ExtResource( 2 )]
position = Vector2( 162.076, 263.541 )
path_to_scene = "res://Level_OutsideXZ.tscn"

[node name="Door_X2" parent="." instance=ExtResource( 2 )]
position = Vector2( 512.199, 168.215 )
path_to_scene = "res://Level_OutsideXZ.tscn"

[node name="Door_Z1" parent="." instance=ExtResource( 2 )]
position = Vector2( 1148.43, 167.966 )
path_to_scene = "res://Level_OutsideXZ.tscn"

[node name="Door_lf_inToZ" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.4689, 148 )
scale = Vector2( 0.2, 5 )
path_to_scene = "res://Level_InsideZ.tscn"

[node name="Door_rt_inToX" parent="." instance=ExtResource( 2 )]
position = Vector2( 1232.53, 148 )
scale = Vector2( 0.2, 5 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 1 )
collision_layer = 8
format = 1
tile_data = PoolIntArray( 65566, 3, 0, 65567, 3, 0, 196608, 1, 0, 196620, 1, 0, 196621, 1, 0, 196645, 3, 0, 196646, 3, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393231, 1, 0, 393232, 1, 0, 393251, 3, 0, 393252, 3, 0, 393253, 3, 0, 393254, 3, 0, 589824, 1, 0, 589825, 1, 0, 589828, 1, 0, 589829, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589857, 3, 0, 589858, 3, 0, 589861, 3, 0, 589862, 3, 0, 786434, 1, 0, 786435, 1, 0 )

[node name="PlayerNode" parent="." instance=ExtResource( 4 )]
position = Vector2( 44.8985, 253.226 )
scale = Vector2( 1.5, 1.5 )

[node name="Jjokji" parent="." instance=ExtResource( 5 )]
position = Vector2( 313.132, -19.2884 )
script = ExtResource( 7 )

[node name="Jjokji2" parent="." instance=ExtResource( 5 )]
position = Vector2( 399.909, 73.0643 )
script = ExtResource( 7 )

[node name="Jjokji3" parent="." instance=ExtResource( 5 )]
position = Vector2( 1213.75, 69.0711 )
script = ExtResource( 7 )

[node name="Jjokji4" parent="." instance=ExtResource( 5 )]
position = Vector2( 430.258, 74.5582 )
script = ExtResource( 7 )

[node name="Jjokji5" parent="." instance=ExtResource( 5 )]
position = Vector2( 244.437, -14.8646 )
script = ExtResource( 7 )

[node name="Jjokji6" parent="." instance=ExtResource( 5 )]
position = Vector2( 538, 227 )
script = ExtResource( 7 )

[node name="Jjokji7" parent="." instance=ExtResource( 5 )]
position = Vector2( 998.414, 0.071106 )
script = ExtResource( 7 )

[node name="CameraRoot" parent="." instance=ExtResource( 6 )]
position = Vector2( -0.376892, 0 )
drag_margin_v_enabled = false

[node name="UI_Group" parent="CameraRoot" instance=ExtResource( 8 )]
[connection signal="body_entered" from="Door_lf_inToZ" to="CameraRoot" method="_on_SameLevelDoor_body_entered"]
[connection signal="body_entered" from="Door_lf_inToZ" to="Door_rt_inToX" method="_on_fromLeftDoor_body_entered"]
[connection signal="body_entered" from="Door_rt_inToX" to="CameraRoot" method="_on_SameLevelDoor_body_entered"]
[connection signal="body_entered" from="Door_rt_inToX" to="Door_lf_inToZ" method="_on_fromRightDoor_body_entered"]
[connection signal="body_entered" from="Jjokji" to="Jjokji" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji2" to="Jjokji2" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji3" to="Jjokji3" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji4" to="Jjokji4" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji5" to="Jjokji5" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji6" to="Jjokji6" method="_on_Jjokji_body_entered"]
[connection signal="body_entered" from="Jjokji7" to="Jjokji7" method="_on_Jjokji_body_entered"]
